# lnaddress_phoenixd

./: Cargo.toml  README.md
src/: cli_arguments.rs  lnurl.rs  main.rs  phoenixd_client.rs
templates/: lnaddress.html  lnurlp.html
